[package]
name = "viow-plugin-hello"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viow-plugin-api = { git = "https://github.com/avijj/viow-plugin-api" }
abi_stable = "0.10"

[lib]
name = "viow_plugin"
crate-type = [ "cdylib", "rlib" ]
